added Mary's comments

--- a/guidelinesWP/01.5-reviewRPs.Rmd
+++ b/guidelinesWP/01.5-reviewRPs.Rmd
@@ -20,7 +20,7 @@ LRPs are common in the assessment and management of marine fisheries where they 
 LRPs and indicators of status can be categorized in ways that demonstrate the diversity of approaches that are available across data types and species life-histories. In particular, LRPs can be derived from theoretical relationships (e.g., stock-recruitment based  reference points), historical patterns (e.g., abundance from which recovery has been observed in the past), or empirical analyses on abundances or life-history traits (Marentette et al. In prep.)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.]. For marine fish species, LRPs are typically estimated as a minimum level of spawning biomass (or proxy) that should not be breached [@sheltonLimitsOverfishingReference2002; @kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021].  @dfoFisheryDecisionMakingFramework2009 identifies additional indicators such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009].  In general, indicators of status can be categorized as natural metrics (e.g., total abundances or other biological or population characteristics), a proxy for a natural metric (e.g., abundances of indicator stocks), or composite indicators that combine information over multiple dimensions or biological metrics of status (Marentette et al. In prep.).  
 
 
-The composite or multidimensional approach for assessing status, sometimes called a "traffic light" approach [@sheltonLimitsOverfishingReference2002], is particularly useful when theoretical or historical abundance-based metrics are not estimable or not applicable, or when data are limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of numerous data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab, *Chionoecetes opilio*, in Canada, where data on catch per unit effort (CPUE), egg clutches, and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. Multidimensional approaches can also be useful to address mismatches in scales among biological stocks, the unit of management, and the spatial scale of data collection. These mismatches are not uncommon among marine species, especially invertebrate and salmonid species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020]. They can create challenges when identifying LRPs at the scale of major stocks [@dfoScienceAdvicePrecautionary2021], and can make undesirable states in fish populations difficult to detect and mitigate.  <!--CH: I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
+The composite or multidimensional approach for assessing status, sometimes called a "traffic light" approach [@sheltonLimitsOverfishingReference2002], is particularly useful when theoretical or historical abundance-based metrics are not estimable or not applicable, or when data are limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of numerous data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab, *Chionoecetes opilio*, in Canada, where data on catch per unit effort (CPUE), egg clutches, and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. Multidimensional approaches can also be useful to address mismatches in scales among biological stocks, the unit of management, and the spatial scale of data collection. These scale mismatches are not uncommon among marine species, especially invertebrate and salmonid species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020]. They can create challenges when identifying LRPs at the scale of major stocks [@dfoScienceAdvicePrecautionary2021], and can make undesirable states in fish populations difficult to detect and mitigate.  <!--CH: I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
 
 <!--CH: in next round, add "Review of Precautionary Approach Reference Points for a Variety of Fisheries Resources in the Maritimes Region". See Carrie's LRP Notes Word file. Dec. 17. 2021--> 
 
@@ -57,7 +57,7 @@ In some cases, single-metric approaches in which spawner abundances are compared
 For marine fish stocks in Canada, LRPs have several roles including triggering rebuilding plans under DFO's Precautionary Approach Framework @dfoFisheryDecisionMakingFramework2009 and the *Fisheries Act*, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. For example, LRPs can be used as part of measurable objectives to inform operational control points which are points where management actions are triggered within harvest control rules, and can also be applied as operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm as defined by an LRP, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021].<!--SUe suggested omitting these last 4  sentences, but I think this is relevant for aggregate abundance LRPs-->
 
 
-In addition, LRPs can be used in performance metrics within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g., 95% probability of staying above a LRP over a specified period) among other objectives<!--, without being explicitly estimated--> [@dfoManagementProcedureFramework2021]. This approach explicitly accounts for uncertainties in the biology of the stock, dynamics of the fleet, observations of abundances and ages at return, and the implementation of management decisions. Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. For fisheries in which management procedures have been simulation tested, assessment of stock status relative to an LRP is not necessary so long as the management procedure selected has been demonstrated to meet conservation (and possibly other) objectives over a range of uncertainties (i.e., modelled scenarios) about stock and fishery dynamics. 
+In addition, LRPs can be used in performance metrics within a Management Procedure Framework (or Management Strategy Evaluation) to identify candidate procedures that achieve conservation objectives (e.g., 95% probability of staying above a LRP over a specified period) among other objectives<!--, without being explicitly estimated--> [@dfoManagementProcedureFramework2021]. This approach explicitly accounts for a range of uncertainties in the biology of the stock, dynamics of the fleet, observations of abundances and ages at return, and the implementation of management decisions. Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. For fisheries in which management procedures have been simulation tested, assessment of stock status relative to an LRP is not necessary so long as the management procedure selected has been demonstrated to meet conservation (and possibly other) objectives over a range of uncertainties (i.e., modelled scenarios) about stock and fishery dynamics. 
 One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified. Instead, management procedures can be evaluated against a suite of plausible underlying models or assumptions. 
 
 
