--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -23,11 +23,11 @@
 
 Uncertainties in CU-level benchmarks affect both proportional and aggregate abundance LRPs, and arise because of observation errors in underlying data, estimation uncertainty in benchmarks, and structural uncertainties in model forms. Each of these three sources of uncertainty in benchmarks are described here. 
 
-First, observations errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates of recruitment in 'run reconstructions' and assessment of status. In particular, the impact of hatcheries on spawner and recruitment time-series is a key uncertainty due to the low rates of marking hatchery salmon and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatcheries can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
+First, observation errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and age-at-maturity can result in data uncertainties, which may impact estimates of recruitment in 'run reconstructions' and assessment of status. In particular, the impact of hatcheries on spawner and recruitment time-series is a key uncertainty due to the low rates of marking hatchery salmon and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatcheries can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin (or within-population) hatchery facilities as well as those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
 
 
 
-Second, in the estimation of benchmarks, statistical uncertainties can be represented with 95% confidence intervals derived analytically or with bootstrapping (or 95% credible intervals for Bayesian analyses).  Short time-series or those with insufficient contrast in spawner abundances can increase estimation uncertainties in benchmarks. For stock-recruitment based benchmarks in particular, observation errors in spawner abundances can bias benchmark estimates ('errors-in-variables'), as can correlations that occur when spawner abundance in a given year depends on recruitment in the previous generation [time-series biases, @waltersFisheriesEcologyManagement2004]. Uncertainties in percentile-based benchmarks can arise because of uncertainties in productivity and harvest rates required to categorize populations for benchmark identification  [as described in  @holtEvaluatingBenchmarksBiological2018]. Uncertainties in benchmarks derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010] may arise due to its parameterization based on spawner-recruit data sets that are outdated (ending in 2000) and likely more productive compared with for populations in our case study. To address this uncertainty, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. All of these benchmarks may be biased when underlying population parameters change over time and these changes are not reflected in the estimation procedure (see Section \@ref(futureResearch) for more details).
+Second, in the estimation of benchmarks, statistical uncertainties can be represented with 95% confidence intervals derived analytically or with bootstrapping (or 95% credible intervals for Bayesian analyses).  Short time-series or those with insufficient contrast in spawner abundances can increase estimation uncertainties in benchmarks. For stock-recruitment based benchmarks in particular, observation errors in spawner abundances can bias benchmark estimates ('errors-in-variables'), as can correlations that occur when spawner abundance in a given year depends on recruitment in the previous generation [time-series biases, @waltersFisheriesEcologyManagement2004]. Uncertainties in percentile-based benchmarks can arise because of uncertainties in productivity and harvest rates required to categorize populations for benchmark identification  [as described in  @holtEvaluatingBenchmarksBiological2018]. Uncertainties in benchmarks derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010] may arise due to its parameterization based on spawner-recruit data sets that are outdated (ending in 2000) and likely more productive compared with populations used in our case study. To address this uncertainty, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. All of these benchmarks may be biased when underlying population parameters change over time and these changes are not reflected in the estimation procedure (see Section \@ref(futureResearch) for more details).
 
 
 
@@ -49,19 +49,19 @@ Uncertainties in peer-reviewed WSP assessments are captured qualitatively throug
 
 ### Proportional LRPs
 
-Uncertainties in status derived from proportional LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when all the data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as the data-rich CUs, population dynamics may diverge due to other unaccounted for processes. We recommend caution when applying provisional LRPs that do not include all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
+Uncertainties in status derived from proportional LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when all the data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as the data-rich CUs, population dynamics may diverge due to other unaccounted for processes. We recommend caution when applying provisional LRPs that do not include direct information from all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
 
 
 ### Aggregate Abundance LRPs
 
 **Logistic regression LRPs**
 
-For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. We provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both. 
+For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. We provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both sources. 
 The estimation of the logistic regression model can be statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allow uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.
 
-Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by the data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity from fisheries among CUs has diverged, or if the covariance in population dynamics has changed due to other natural or anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
+Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by the data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity from fisheries among CUs has diverged, or if the covariance in population dynamics has changed due to natural or other anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
-Furthermore, uncertainties in both aggregate abundances LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived CU status on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generational smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). Further details are described in Section \@ref(guidelines). 
+Furthermore, uncertainties in both aggregate abundances LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived CU status on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generationally smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). Further details are described in Section \@ref(guidelines). 
 
 <!--CH comment: Suggest removing next bullet as I feel like it's getting into the weeds too much, and only makes sense after a bullet describing how logistic regression LRPs can be statistically integrated with SR-based benchmarks and CU status.
 
@@ -133,9 +133,9 @@ Further research and identifying when and how to account for time-varying parame
 
 ### ADAPTING LRPS TO INCLUDE A BROADER SCOPE OF SERIOUS HARM
 
-We recommend future research into LRPs that consider the ecosystem component of serious harm for Pacific salmon and include longer time frames for assessing thresholds of serious harm. While the definition of serious harm under DFO's Precautionary Approach Framework encompasses impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], the assessment of harm to these components depends to some extent on the time-frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or Indigenous Knowledge has demonstrated that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @mckechnieArchaeologicalDataProvide2014] 
+We recommend future research into LRPs that consider the ecosystem component of serious harm for Pacific salmon and include longer time frames for assessing thresholds of serious harm. While the definition of serious harm under DFO's Precautionary Approach Framework encompasses impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], the assessment of harm to these components depends to some extent on the time frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or Indigenous Knowledge has demonstrated that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @mckechnieArchaeologicalDataProvide2014].
 
-Indigenous Knowledge has been considered in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], and there is value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2021 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both indigenous and western science perspectives are valued though the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By investigating serious harm, reference points, and the time-varying nature of these concepts from both indigenous and mainstream scientific perspectives, LRPs may better reflect biological processes underlying both knowledge systems. <!--CH: I see the internal inconsistency here where our direction from NHQ is to provide scientifically based LRPs, yet reconciliation says we should change our perspective and not focus entirely on western science. However, our TWG really wasn't equipped to do this and was beyond our ToR-->
+Indigenous Knowledge has been considered in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], and there is value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2021 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both Indigenous and Western science perspectives are valued through the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By investigating serious harm, reference points, and the time-varying nature of these concepts from both Indigenous and Western scientific perspectives, LRPs may better reflect biological processes underlying both knowledge systems. <!--CH: I see the internal inconsistency here where our direction from NHQ is to provide scientifically based LRPs, yet reconciliation says we should change our perspective and not focus entirely on western science. However, our TWG really wasn't equipped to do this and was beyond our ToR-->
 
 <!--CH omit: too focused on Scanner tool for this paper and would need reworking... "More specifically, methods for CU assessments could further consider serious harm to habitat or ecosystems, for example by extending the Pacific Salmon Status Scanner Tool to account for ecosystem components of serious harm, as well as divergent levels of data quantity and quality among CUs. Furthermore, the Rapid Multidimensional Scanner Tool could be extended to provide management triggers that occur prior to reaching the LRP, for example that require precautionary management and/or increased monitoring, as in @dowlingGuidelinesDevelopingFormal2015."-->
 
@@ -147,12 +147,12 @@ Alternative LRP methods may be developed in the future to capture a broader rang
 
 ###EVALUATION OF LRP METHODS
 
-We recommend further consideration and evaluation of the four proposed criteria to identify if data-limited CUs can be represented by data-rich CUs (Step 3, Section \@ref(guidelines)). For example, these criteria could be applied to SMUs where CU statuses are available to assess the extent to which statuses covary when CUs are deemed representative of each other. Simulation evaluation could further evaluate the extent to which CU statuses on a single metric of status covary under a range of plausible underlying covariance in recruitment, age-structure and exploitation rates. 
+We recommend further consideration and evaluation of the four proposed criteria to identify if data-limited CUs can be represented by data-rich CUs (Step 3, Section \@ref(guidelines)). For example, these criteria (and/or other considerations) could be applied to SMUs where CU statuses are available to assess the extent to which statuses covary when CUs are deemed representative of each other. Simulation evaluation could further evaluate the extent to which CU statuses on a single metric of status covary under a range of plausible underlying covariance structures in recruitment, age-at-maturity, and exploitation rates. 
 
 In addition, we recommend simulation evaluation of logistic regression LRPs and projection LRPs to data limitations related to the number of CUs with data and assumptions about population dynamics and covariance among CUs. We recommend that these evaluations be parameterized to the SMUs where their application is proposed to ensure results are relevant to the specific context under consideration.
 
 
-When applying methods to specific case studies, we recommend that aggregate abundance LRPs consider major structural uncertainties either through sensitivity analyses or model ensemble approaches. These analyses can determine how sensitive aggregate abundance benchmarks are to key model uncertainties, including those related to time-varying parameters, depensation at low abundances, observation errors, and covariance in population dynamics and vulnerability to harvest. We emphasize the critical importance of this step considering a wide range of hypotheses about underlying dynamics. Indeed, standard stock-recruitment models may have limited use if they do not capture current dynamics. In addition, we recommend simulation evaluation to assess the robustness of LRPs to violating underlying analytical assumptions. Simulation evaluation could further be used to assess the frequency of updates to LRPs required to achieve objectives given underlying changes in model parameters and structure. <!--CH: observation errors in CU-status are relevant for logistic-regression LRPs as they might inflate noise in the LR, and they are relevant to the projection LRPs in the noise in the spawner and recruitment data-->
+When applying methods to specific case studies, we recommend that aggregate abundance LRPs consider major structural uncertainties either through sensitivity analyses or model ensemble approaches. These analyses can determine how sensitive aggregate abundance benchmarks are to key model uncertainties, including those related to time-varying parameters, depensation at low abundances, observation errors, and covariance in both population dynamics and vulnerability to harvest. We emphasize the critical importance of this step considering a wide range of hypotheses about underlying dynamics. Indeed, standard stock-recruitment models may have limited use if they do not capture current dynamics. In addition, we recommend simulation evaluation to assess the robustness of LRPs to violating underlying analytical assumptions. Simulation evaluation could further be used to assess the frequency of updates to LRPs required to achieve objectives given underlying changes in model parameters and structure. <!--CH: observation errors in CU-status are relevant for logistic-regression LRPs as they might inflate noise in the LR, and they are relevant to the projection LRPs in the noise in the spawner and recruitment data-->
 
 
 
