--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -893,8 +893,11 @@
 
 @article{kronlundConsiderationsDesignRebuilding2021,
   title = {Considerations for the Design of Rebuilding Strategies for {{Canadian}} Fish Stocks},
-  author = {Kronlund, A. R and , Canadian Science Advisory Secretariat and {Canada} and {Department of Fisheries and Oceans} and {National Capital Region}},
+  author = {Kronlund, A. R and Marentette, J. R. and Olmstead, M. and Shaw, J. and Beauchamp, B.},
   year = {2021},
+  journal = {DFO Canadian Science Advisory Secretariate Research Document},
+  volume = {2021/051},
+  pages = {viii + 134 p.},
   langid = {english},
   annotation = {OCLC: 1266173370},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\J4E6YQNK\\Kronlund et al. - 2021 - Considerations for the design of rebuilding strate.pdf}
